--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Run tests
         run: npm run test -- --coverage
   style:
-    name: style
+    name: Style
     runs-on: ubuntu-latest
 
     steps:
